# chess-coach

./: .env.example  .gitignore  AGENTS.md  README.md  firebase.json  index.html  package-lock.json  package.json  start-windows.bat  tsconfig.json
docs/: ROADMAP.md
firebase-hosting/: auth-bridge.html  index.html
scripts/: check-code-size.mjs  check-code-size.test.mjs  code-size-rules.mjs  update-openings.mjs
src/: App.tsx  analysis.ts  dashboard.ts  demo.ts  firebase.ts  main.tsx  openings.ts  sfx.ts  stockfish.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tests.rs
src-tauri/src/commands/: ai.rs  cloud.rs  games.rs  profiles.rs  sources.rs  training.rs
src-tauri/src/db/: accounts.rs  ai_explanation_store.rs  analysis_store.rs  cloud_activity_merge.rs  cloud_content_export.rs  cloud_content_merge.rs  cloud_content_schema.rs  cloud_content_tests.rs  cloud_export.rs  cloud_merge.rs  cloud_state.rs  game_previews.rs  games.rs  migrations.rs  migrations_tests.rs  profiles.rs  training.rs  training_cards.rs  training_cleanup.rs  training_cloud.rs  training_schema.rs
src-tauri/src/models/: cloud_content.rs  mod.rs  training.rs
src-tauri/src/services/: ai_cache.rs  ai_cache_tests.rs  ai_providers.rs  ai_summary.rs  cloud_validation.rs  game_sources.rs  oauth.rs  secret_store.rs  training_scheduler.rs
tests/: batch-analysis.test.mjs  board-hints.test.mjs  candidate-lab.test.mjs  game-previews.test.mjs  game-story.test.mjs  insights.test.mjs  (+7 more)
(+119 files in other folders)
