[package]
name = "chess-coach-vn"
version = "0.6.2"
description = "Prototype phân tích cờ vua trực quan bằng tiếng Việt"
authors = ["Chess Coach"]
edition = "2021"

[lib]
name = "chess_coach_vn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
sha2 = "0.10"
getrandom = "0.3"
